Clean up all code related to AGP < 7.0.0